--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.31.1",
     "gatsby-background-image": "^1.4.0",
     "gatsby-image": "^2.10.0",
@@ -22,6 +23,7 @@
     "gatsby-plugin-sharp": "^2.13.4",
     "gatsby-plugin-styled-components": "^3.9.0",
     "gatsby-plugin-transition-link": "^1.20.5",
+    "gatsby-source-contentful": "^4.5.3",
     "gatsby-source-filesystem": "^2.10.0",
     "gatsby-transformer-sharp": "^2.11.0",
     "gsap": "^3.6.0",
