--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^2.31.1",
     "gatsby-background-image": "^1.4.0",
     "gatsby-image": "^2.10.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sass": "^3.1.0",
     "gatsby-plugin-sharp": "^2.13.4",
     "gatsby-plugin-styled-components": "^3.9.0",
@@ -30,6 +31,7 @@
     "gsap": "^3.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.1.0",
     "sass": "^1.32.5",
     "styled-components": "^5.2.1"
